fix: flexbox doesnt work at build css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Galeri Ayam Gepyek</title>
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="./build.css">
     <!-- Google Fonts -->
@@ -15,6 +15,7 @@
         rel="stylesheet">
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="shortcut icon" href="./img/img (1).jpeg" type="image/x-icon">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
                 <img src="./img/img (4).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img (6).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
             </div>
-            <div class="grid gap-4 ">
+            <div class="grid gap-4">
                 <img src="./img/img (2).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img_14.jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img (12).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
@@ -41,34 +42,34 @@
                 <img src="./img/img (9).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img (6).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
             </div>
-            <div class="grid gap-4 ">
+            <div class="grid gap-4">
                 <img src="./img/img (41).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img_29.jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img (42).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
             </div>
-            <div class="grid gap-4 ">
+            <div class="grid gap-4">
                 <img src="./img/img_25.jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img_27.jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img (41).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
             </div>
-            <div class="grid gap-4 ">
+            <div class="grid gap-4">
                 <img src="./img/img_24.jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img (42).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img (41).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
             </div>
-            <div class="grid gap-4 ">
+            <div class="grid gap-4">
                 <img src="./img/img (41).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img_29.jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img (42).jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
             </div>
-            <div class="grid gap-4 ">
+            <div class="grid gap-4">
                 <img src="./img/img_21.jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img_15.jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
                 <img src="./img/img_20.jpeg" alt="" class="h-auto max-w-full rounded-lg cursor-pointer" data-aos="fade-up" loading="lazy">
             </div>
         </div>
 
-        <div id="modal" class="hidden bg-black/70 fixed top-0 left-0 z-90 w-screen h-screen justify-center items-center">
+        <div id="modal" class="hidden bg-black/70 fixed top-0 left-0 z-90 w-screen h-screen flex justify-center items-center">
             <a href="javascript:void(0)" class="fixed z-100 top-6 right-8 text-white text-2xl font-bold"
                 onclick="closeModal()">X</a>
             <img id="modal-img" class="max-h-[600px] object-cover" src="" alt="">
